loadbalancer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-svc

spec:
  ports:
    - protocol: TCP
      name: web
      port: 8000
    - protocol: TCP
      name: websecure
      port: 4443
  selector:
    app: traefik
