loadbalancer/traefik.yaml
# routing 관련 설정은 이 파일에서 제어

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`traefik.example.com`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService

  - match: Host(`api.example.com`)
    kind: Rule
    services:
    - name: imaging-server-svc
      port: 3000

  - match: Host(`es.api.example.com`)
    kind: Rule
    services:
    - name: elasticsearch-svc
      port: 9200

  - match: Host(`kibana.example.com`)
    kind: Rule
    services:
    - name: kibana-svc
      port: 5601

  - match: Host(`mq.api.example.com`)
    kind: Rule
    services:
    - name: queue
      port: 5672

  - match: Host(`rabbitmq.example.com`)
    kind: Rule
    services:
    - name: queue
      port: 15672

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`traefik.example.com`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService

  - match: Host(`api.example.com`)
    kind: Rule
    services:
    - name: imaging-server-svc
      port: 3000

  - match: Host(`es.api.example.com`)
    kind: Rule
    services:
    - name: elasticsearch-svc
      port: 9200

  - match: Host(`kibana.example.com`)
    kind: Rule
    services:
    - name: kibana-svc
      port: 5601

  - match: Host(`mq.api.example.com`)
    kind: Rule
    services:
    - name: queue
      port: 5672

  - match: Host(`rabbitmq.example.com`)
    kind: Rule
    services:
    - name: queue
      port: 15672

  tls:
    certResolver: myresolver
